Fix header spacing

--- a/css/_style.scss
+++ b/css/_style.scss
@@ -56,7 +56,7 @@ nav {
     padding: 0;
     display: block;
     width: 100%;
-    padding: 5px 0;
+    padding: 20px 0;
     padding-bottom: 1em;
     border-bottom: 1px solid #eaeaea;
 }
